--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Mohammadpu, Dhaka, Bangladesh</p>
+                <p>Mirpur, Dhaka, Bangladesh</p>
               </div>
 
               <div class="email">
