--- a/index.html
+++ b/index.html
@@ -603,33 +603,83 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/mkgnndkv" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
+  <form id="contactForm" action="https://formspree.io/f/mkgnndkv" method="post" role="form" class="php-email-form">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label for="name">Your Name</label>
+        <input type="text" name="name" class="form-control" id="name" required>
+      </div>
+      <div class="form-group col-md-6">
+        <label for="email">Your Email</label>
+        <input type="email" class="form-control" name="email" id="email" required>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="subject">Subject</label>
+      <input type="text" class="form-control" name="subject" id="subject" required>
+    </div>
+    <div class="form-group">
+      <label for="message">Message</label>
+      <textarea class="form-control" name="message" rows="10" required></textarea>
+    </div>
+    <div class="my-3">
+      <div class="loading" style="display: none;">Loading...</div>
+      <div class="error-message" style="display: none;"></div>
+      <div class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
+    </div>
+    <div class="text-center"><button type="submit">Send Message</button></div>
+  </form>
+</div>
+
+<script>
+  document.getElementById('contactForm').addEventListener('submit', async function(event) {
+    event.preventDefault(); // Prevent the default form submission
+
+    const form = event.target;
+    const formData = new FormData(form);
+    
+    try {
+      // Show loading message
+      const loadingMessage = document.querySelector('.loading');
+      loadingMessage.style.display = 'block';
+
+      // Send the form data to Formspree
+      const response = await fetch(form.action, {
+        method: 'POST',
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      });
+
+      // Check if the request was successful
+      if (response.ok) {
+        // Show success message and hide the form
+        const sentMessage = document.querySelector('.sent-message');
+        sentMessage.style.display = 'block';
+        loadingMessage.style.display = 'none';
+
+        // Redirect to thank-you page after a short delay
+        setTimeout(() => {
+          window.location.href = '/thanks?language=en'; // Redirect to your thank-you page
+        }, 3000); // Adjust delay as needed
+      } else {
+        // Handle error response
+        const errorMessage = document.querySelector('.error-message');
+        errorMessage.textContent = 'There was a problem with your submission. Please try again.';
+        errorMessage.style.display = 'block';
+        loadingMessage.style.display = 'none';
+      }
+    } catch (error) {
+      console.error('Error:', error);
+      const errorMessage = document.querySelector('.error-message');
+      errorMessage.textContent = 'There was a problem with your submission. Please try again.';
+      errorMessage.style.display = 'block';
+      loadingMessage.style.display = 'none';
+    }
+  });
+</script>
+
 
         </div>
 
