--- a/thanks.html
+++ b/thanks.html
@@ -9,4 +9,7 @@
     <h1>Thank You!</h1>
     <p>Your submission has been received.</p>
 </body>
+    setTimeout(() => {
+    window.location.href = '/thanks.html?language=en'; // Redirect to your thank-you page
+}, 3000); // Adjust delay as needed
 </html>
