--- a/thanks.html
+++ b/thanks.html
@@ -9,7 +9,9 @@
     <h1>Thank You!</h1>
     <p>Your submission has been received.</p>
 </body>
+    <script>
     setTimeout(() => {
     window.location.href = '/thanks.html?language=en'; // Redirect to your thank-you page
 }, 3000); // Adjust delay as needed
+    </script>
 </html>
