--- a/index.html
+++ b/index.html
@@ -661,8 +661,8 @@
 
         // Redirect to thank-you page after a short delay
         setTimeout(() => {
-          window.location.href = 'https://roohweb.wordpress.com/'; // Redirect to your thank-you page
-        }, 300); // Adjust delay as needed
+          window.location.href = '/thanks.html?language=en'; // Redirect to your thank-you page
+        }, 3000);
       } else {
         // Handle error response
         const errorMessage = document.querySelector('.error-message');
