--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-  <form id="contactForm" action="https://formspree.io/f/mkgnndkv" method="post" role="form" class="php-email-form">
+  <form id="contactForm" action="https://formspree.io/f/mkgnndkv" method="post" data-redirect="/thanks" role="form" class="php-email-form">
     <div class="row">
       <div class="form-group col-md-6">
         <label for="name">Your Name</label>
