--- a/thanks.html
+++ b/thanks.html
@@ -10,7 +10,7 @@
         <h1 style="color: #4CAF50; font-size: 2.5em; margin: 0;">Thank You!</h1>
         <p style="color: #555555; font-size: 1.2em;">Your submission has been received.</p>
         <p style="color: #777777; margin-top: 20px;">We appreciate your feedback and will get back to you soon!</p>
-        <a href="/" style="text-decoration: none; color: white; background-color: #4CAF50; padding: 10px 20px; border-radius: 5px; font-size: 1em; margin-top: 20px; display: inline-block;">Go to Homepage</a>
+        <a href="https://roohweb.wordpress.com/" style="text-decoration: none; color: white; background-color: #4CAF50; padding: 10px 20px; border-radius: 5px; font-size: 1em; margin-top: 20px; display: inline-block;">Go to My Website</a>
     </div>
 </body>
 </html>
