--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 
         // Redirect to thank-you page after a short delay
         setTimeout(() => {
-          window.location.href = '/Portfolio/thanks.html?language=en'; // Redirect to your thank-you page
+          window.location.href ='/thanks.html?language=en'; // Redirect to your thank-you page
         }, 3000);
       } else {
         // Handle error response
