--- a/index.html
+++ b/index.html
@@ -602,38 +602,39 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-  <form id="contactForm" action="https://formspree.io/f/mkgnndkv" method="post" data-redirect="/thanks" role="form" class="1php-email-form">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label for="name">Your Name</label>
-        <input type="text" name="name" class="form-control" id="name" required>
-      </div>
-      <div class="form-group col-md-6">
-        <label for="email">Your Email</label>
-        <input type="email" class="form-control" name="email" id="email" required>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="subject">Subject</label>
-      <input type="text" class="form-control" name="subject" id="subject" required>
-    </div>
-    <div class="form-group">
-      <label for="message">Message</label>
-      <textarea class="form-control" name="message" rows="10" required></textarea>
-    </div>
-    <div class="my-3">
-      <div class="loading" style="display: none;">Loading...</div>
-      <div class="error-message" style="display: none;"></div>
-      <div class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
-    </div>
-    <div class="text-center"><button type="submit">Send Message</button></div>
-  </form>
- <div class="loading" style="display:none;">Submitting your form...</div>
-<div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
-<div class="error-message" style="display:none;">There was a problem with your submission. Please try again.</div>
+         <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="https://formspree.io/f/mkgnndkv" method="post" role="form" data-redirect="/thanks" role="form" class="php-email-form">
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <label for="name">Your Name</label>
+                  <input type="text" name="name" class="form-control" id="name" required>
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="name">Your Email</label>
+                  <input type="email" class="form-control" name="email" id="email" required>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="name">Subject</label>
+                <input type="text" class="form-control" name="subject" id="subject" required>
+              </div>
+              <div class="form-group">
+                <label for="name">Message</label>
+                <textarea class="form-control" name="message" rows="10" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
+            <div class="loading" style="display:none;">Submitting your form...</div>
+                  <div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
+                  <div class="error-message" style="display:none;">There was a problem with your submission. Please try again.</div>
 
-</div>
+          </div>
+   
           <script>
   document.getElementById('contactForm').addEventListener('submit', async function(event) {
     event.preventDefault(); // Prevent the default form submission
@@ -671,9 +672,10 @@
         sentMessage.style.display = 'block';
 
         // Redirect to the "next" URL provided by the server
-        setTimeout(() => {
-          window.location.href = data.next; // Redirect to the thank-you page
-        }, 2000); // Adjust the delay if needed
+         setTimeout(() => {
+          window.location.href = 'Portfolio/thanks?language=en'; // Redirect to your thank-you page
+        }, 2000);
+      
       } else {
         // Handle error if the response was not successful
         loadingMessage.style.display = 'none';
