--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 
         // Redirect to the "next" URL provided by the server
          setTimeout(() => {
-          window.location.href = 'Portfolio/thanks?language=en'; // Redirect to your thank-you page
+          window.location.href = '/Portfolio/thanks?language=en'; // Redirect to your thank-you page
         }, 2000);
       
       } else {
