--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
           </div>
 
          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/mkgnndkv" method="post" role="form" data-redirect="/thanks" role="form" class="php1-email-form">
+            <form action="https://formspree.io/f/mkgnndkv" method="post" role="form" data-redirect="/Portfolio/thanks" role="form" class="php1-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -621,9 +621,6 @@
               <div class="form-group">
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                // Loading section
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
