--- a/index.html
+++ b/index.html
@@ -622,6 +622,9 @@
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
+              <div>
+                
+              </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
             <div class="loading" style="display:none;">Submitting your form...</div>
