--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
-              <div>
+              <div class="my-3">
                 
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
