--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Strategic professional with 8+ years of experience operating data communications systems and developing business solutions. Manages high-quality ICT and Internet solutions and has i-depth knowledge of Cisco hardware and data management.</p>
+          <p>Strategic professional with 9+ years of experience operating data communications systems and developing business solutions. Manages high-quality ICT and Internet solutions and has i-depth knowledge of Cisco hardware and data management.</p>
         </div>
 
         <div class="row">
@@ -186,21 +186,21 @@
             <div class="progress">
               <span class="skill">Computer Skill<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"> HTML & CSS <i class="val">80%</i></span>
+              <span class="skill"> HTML & CSS <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">JavaScript <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -209,7 +209,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Networking <i class="val">50%</i></span>
+              <span class="skill">Networking <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -218,7 +218,7 @@
             <div class="progress">
               <span class="skill">WordPress/CMS <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -255,7 +255,7 @@
                 organization where I can utilize my technical expertise and strong analytical skills to drive network 
                 innovation and improve network performance.</em></p>
               <ul>
-                <li>Mohammadpu,Dhaka, BD</li>
+                <li>Mirpur,Dhaka, BD</li>
                 <li>+880161075007</li>
                 <li>Roohjahidhasan@yahoo.com</li>
               </ul>
@@ -263,7 +263,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp;  Web & Networking</h4>
+              <h4>Master of Fine Arts & amp;  Web & Networking</h4>
               <h5>2025 - 2026</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
