--- a/index.html
+++ b/index.html
@@ -597,9 +597,7 @@
                 <h4>Call:</h4>
                 <p>+8801616075007</p>
               </div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29209.35913317197!2d90.34717954180297!3d23.776963806938053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1695129078603!5m2!1sen!2sbd" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-            </div>
-
+             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d27561.879758919487!2d90.37021188732507!3d23.81506675458908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1729424499141!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
           </div>
 
          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
@@ -709,7 +707,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="#">Roohweb</a>
+        Designed by <a href="#">Md Jahid Hasan</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
