--- a/index.html
+++ b/index.html
@@ -597,11 +597,12 @@
                 <h4>Call:</h4>
                 <p>+8801616075007</p>
               </div>
-             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d27561.879758919487!2d90.37021188732507!3d23.81506675458908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1729424499141!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d27561.879758919487!2d90.37021188732507!3d23.81506675458908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1729424499141!5m2!1sen!2sbd" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+            </div>
           </div>
 
          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/mkgnndkv" method="post" role="form" data-redirect="/Portfolio/thanks" role="form" class="php1-email-form">
+            <form action="https://formspree.io/f/mkgnndkv" method="post" role="form" data-redirect="/Portfolio/thanks" class="1php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -621,14 +622,12 @@
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
-                
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-            <div class="loading" style="display:none;">Submitting your form...</div>
-                  <div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
-                  <div class="error-message" style="display:none;">There was a problem with your submission. Please try again.</div>
-
           </div>
    
           <script>
