--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/Profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html"> Md Jahid Hasan</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/i/flow/login?redirect_after_login=%2FRoohjahidhasan%2F" class="twitter"><i class="bx bxl-twitter"></i></a>
