--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume <a href="https://docs.google.com/document/d/1YfqU1CisaJZTCggRPeLi3-i9zDTUvsIn/edit?usp=sharing&ouid=100997768449843573942&rtpof=true&sd=true">Click here to Download</a> </h2>
+          <h2>Resume <a href="https://docs.google.com/document/d/1v71zLjjHMxILRaq6baPqjZkyRnT5CfwHqlUlLTfn9uc/edit?usp=sharing">Click here to Download</a> </h2>
           <p>A highly skilled Networking Engineer and Web Developer with 8+ years of experience in designing, implementing, and maintaining robust network infrastructures while also creating dynamic web applications. Seeking opportunities to leverage my expertise in both fields to contribute to Lear-3 C0mmunication & Dream.Net as Networking Operation Center(NOC).</p>
         </div>
 
