--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 class="text-light"><a href="index.html"> Md Jahid Hasan</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/i/flow/login?redirect_after_login=%2FRoohjahidhasan%2F" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/syedjahidhasanbd/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/Roohjahidhasan/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/roohjahidhasan/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://join.skype.com/invite/w6rOpgfwkesx" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/roohzahidhasan/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
