--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 Nov 1998</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 Novembar </span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>Roohweb.wordpress.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+8801616075007</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dhaka,Bangladesh</span></li>
@@ -104,7 +104,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Sc Engg. in CSE</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Roohjahidhasan@Yahoo.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Roohjahidhasan@yahoo.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
